- STAR-42: Support forced-output SNVs in the forced-output VCF.
v2.3.12
- STAR-32: Trigger phasing of SNVs if an indel is encountered within the phasing interval.
- STAR-14: Add --targeted-regions-bed parameter to Starling for flagging OffTarget positions. Also
  added --targetRegions to the python workflow wrapper.
- Apply SiteConflict filter to block-compressed areas that overlap a filtered indel. This was a 
  side-effect of a restructuring of the code, but was deemed to be more correct than the previous behavior.
v2.3.11
- Modify workflow generation to remove use of reflection
v2.3.10
- STARKA-234: make --exome flag affect indel-error-model, scoring-model and indel-ref-error-factor arguments to starling
- WGSW-357 ensure that ploidy conflict filter is consistently applied for all
records with no coverage/unknown genotype
v2.3.9
- STARKA-231 correct codon phasing for insertions/small-fragments within the
phasing range
v2.3.8
- STARKA-227 Wrong Qscore value reported as GQX in overlapping indels
- STARKA-226 codon phaser does not account for read N-trimming
- WGSW-370 - force overlapping indels to use the same scoring model. If either is a complex indel (i.e. contains both an insertion and a deletion), then both uise the default model. Otherwise, both use the VQSR model, if enabled.
- WGSW-358 - Make homref calls (GT=0/0) use the default model, not VQSR. This includes clinical indels/forced output.
v2.3.7
- Fix VCF version labels
- STARKA-221 remove non-vqsr depth filter labels in strelka somatic snv vcf
v2.3.6
- STARKA-222 enable partial win32 build/visual studio development
- WGSW-293, WGSW-297 re-update germline VQSR cutoffs to reduce trio conflicts
- STARKA-220 improve build system versioning
- STARKA-217 adjust codon phaser to match read and basecall filtration of
non-phased variants, and align phased candidates near indels correctly
- STARKA-191 add denovo calling model for parent/child trios
v2.3.5