@@ -1,3 +1,5 @@
+- STAR-32: When SNVs are not phased due to low read depth (<10), add
+Unphased to INFO field
 - STAR-42: Support forced-output SNVs in the forced-output VCF.
 v2.3.12
 - STAR-32: Trigger phasing of SNVs if an indel is encountered within the phasing interval.
